--- a/style.css
+++ b/style.css
@@ -49,3 +49,42 @@ a {
     border: none;
     border-radius: 10px;
 }
+
+#d1 {
+    padding-left: 0px;
+    display: flex;
+}
+
+#d1 ul {
+    padding-left: 70px;
+    display: flex;
+    list-style: none;
+}
+
+h1 {
+    margin: 0px;
+    padding-left: 70px;
+}
+
+p {
+    padding: 0px;
+    margin: 0px;
+    font-weight: bold;
+}
+
+#d2 {
+    margin-top: 5px;
+    display: flex;
+}
+
+#evaluate ul {
+    padding-left: 70px;
+    list-style: none;
+    display: flex;
+}
+
+#share {
+    display: flex;
+    padding-left: 1000px;
+    align-items: center;
+}
